Lint and format project